Update Show more projects Btn

--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -44,7 +44,10 @@
 
 
 .showMoreContainer button {
-    padding: 15px 25px;
+    display:flex;
+    align-items: center;
+    padding: 15px 35px;
+    padding-left: 20px;
     border-radius: 15px;
     margin: 30px auto;
     border:1px solid var(--btn-orange);
@@ -53,6 +56,14 @@
     color: var(--text-light);
     cursor: pointer;
     transition: 0.2s;
+    position: relative;
+}
+
+.showMoreContainer button span {
+    display: flex;
+    font-size: 18px;
+    position: absolute;
+    right: 10px;
 }
 
 .showMoreContainer button:hover {
