--- a/src/components/cards/ProjectCard.module.scss
+++ b/src/components/cards/ProjectCard.module.scss
@@ -2,35 +2,37 @@
     display: flex;
     gap: 20px;
     background: #f6faff;
-    padding: 20px 0px;
+    // padding: 20px 0px;
     border-radius: 15px;
-    box-shadow: 1px 1px 3px #00000030;
+    margin-top: 20px;
+    box-shadow: 1px 1px 10px #00000030;
     transition: 0.6s;
-    width: 100%;
+    width: 80%;
 
-    &:hover {
-        box-shadow: 0px 0px 10px #00000040;
-        transform: scale(1.03);
+    &:first-child {
+        margin-top: 0px;
     }
 
     .media {
-        width: 600px;
         border-radius: 15px;
-        margin-left: 10px;
+        // margin-left: 10px;
+        width: 600px;
+        // object-fit: contain;
     }
 
     .content {
         padding: 20px;
+        height: 400px;
         position: relative;
 
         .title {
-            font-size: 24px;
+            font-size: 20px;
             margin-bottom: 10px;
             color: var(--text-dark);
         }
 
         .description {
-            font-size: 17px;
+            font-size: 16px;
             color: var(--text-dark);
         }
 
