--- a/src/components/cards/ProjectCard.module.scss
+++ b/src/components/cards/ProjectCard.module.scss
@@ -16,9 +16,9 @@
 
     .media {
         border-radius: 15px;
-        // margin-left: 10px;
         width: 600px;
         object-fit: cover;
+        margin: 10px;
     }
 
     .content {
