Update pCard and Contact

--- a/src/components/contact/Contact.module.scss
+++ b/src/components/contact/Contact.module.scss
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: flex-start;
     flex-wrap: wrap;
-    padding: 2rem;
+    padding: 4rem 2rem;
     gap: 50px;
     border-radius: 10px;
     box-shadow: 0 0px 3px rgba(0, 0, 0, 0.1);
