--- a/src/components/cards/ProjectCard.module.scss
+++ b/src/components/cards/ProjectCard.module.scss
@@ -14,6 +14,10 @@
         margin-top: 0px;
     }
 
+    &:last-child {
+        margin-bottom: 20px;
+    }
+
     .media {
         border-radius: 15px;
         width: 600px;
