show all project button

--- a/src/components/parallax/ParallaxGallery.css
+++ b/src/components/parallax/ParallaxGallery.css
@@ -1,8 +1,8 @@
 .parallax-container {
     height: 60vh;
-    width: 20vw;
+    width: 25vw;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     perspective: 1px;
   }
   
