--- a/src/components/cards/ProjectCard.module.scss
+++ b/src/components/cards/ProjectCard.module.scss
@@ -63,6 +63,14 @@
     }
 }
 
+@media screen and (max-width: 1280px) {
+    .container {
+        .media {
+            width: 350px;
+        }
+    }
+}
+
 @media screen and (max-width: 768px) {
     .container {
         flex-direction: column;
