--- a/src/components/contact/Contact.module.scss
+++ b/src/components/contact/Contact.module.scss
@@ -77,5 +77,10 @@
     &-content .contactButton:hover {
         background-color: var(--btn-orange);
     }
+}
 
+@media screen and (max-width: 1280px) {
+    .container {
+        width: 986px;
+    }
 }
