--- a/src/components/showcasing/MainSection.module.scss
+++ b/src/components/showcasing/MainSection.module.scss
@@ -76,6 +76,10 @@
                     width: 30%;
                 }
             }
+            
+            .imgContainer {
+                justify-content: center;
+            }
         }
     }
 }
