--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -29,6 +29,12 @@
     gap: 40px;
 }
 
+.teamContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 1200px;
+}
 
 .responsiveContainer {
     display: flex;
@@ -41,7 +47,6 @@
     overflow: hidden;
     transition: max-height 1s ease;
 }
-
 
 .showMoreContainer button {
     display: flex;
@@ -80,12 +85,51 @@
     .cardContainer {
         width: 986px;
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         flex-wrap: wrap;
         gap: 30px;
     }
 
+    .teamContainer {
+        width: 986px;
+    }
+
     .title .headers {
         font-size: 36px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .responsiveContainer {
+        display: flex;
+        /* flex-wrap: wrap; */
+        justify-content: center;
+        width: 768px;
+        gap: 40px;
+        margin: 20px auto;
+        overflow: hidden;
+        transition: max-height 1s ease;
+    }
+
+    .cardContainer {
+        width: 768px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+
+    .teamContainer {
+        /* display:grid;
+        grid-template-columns: 1fr 1fr 1fr; */
+        width: 768px;
+        gap: 70px;
+    }
+}
+
+@media screen and (max-width: 842px) {
+    .cardContainer {
+        width: 640px;
     }
 }
