--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -80,3 +80,11 @@
         }
     }
 }
+
+@media screen and (max-width: 1024px) {
+    .container {
+        .content {
+            width: 768px;
+        }
+    }
+}
