--- a/src/components/navigation/navbar/navbar.module.scss
+++ b/src/components/navigation/navbar/navbar.module.scss
@@ -116,13 +116,21 @@
 
 @media screen and (max-width: 1280px) {
     .container {
-        width: 100%;
+        width: 986px;
     }
-    
+
     .topPageVectors {
         display: None;
     }
+}
 
+@media screen and (max-width: 1024px) {
+    .container {
+        width: 768px;
+    }
+}
+
+@media screen and (max-width: 768px) {
     .logoLink {
         display: none;
     }
