--- a/src/components/showcasing/MainSection.module.scss
+++ b/src/components/showcasing/MainSection.module.scss
@@ -83,3 +83,33 @@
         }
     }
 }
+
+@media screen and (max-width: 1024px) {
+    .container {
+        width: 768px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        // width: 100%;
+        .content {
+            height: 300px;
+
+            .imgContainer {
+                display:none;
+            }
+
+            .textContainer {
+                justify-content: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                h1 {
+                    text-align: center;
+                }
+            }
+        }
+    }
+}
