--- a/src/components/cards/ProjectCard.module.scss
+++ b/src/components/cards/ProjectCard.module.scss
@@ -77,7 +77,7 @@
         width: 90%;
 
         .media {
-            width: 100%;
+            width: 200px;
         }
 
         .content div {
@@ -90,9 +90,5 @@
             }
         }
     }
-
-
-
-
 }
 
