--- a/src/components/contact/Contact.module.scss
+++ b/src/components/contact/Contact.module.scss
@@ -90,3 +90,12 @@
         width: 768px;
     }
 }
+
+
+@media screen and (max-width: 768px) {
+    .container {
+        &-imgDev {
+            display:none;
+        }
+    }
+}
