--- a/src/components/cards/TeamMemberCard.module.scss
+++ b/src/components/cards/TeamMemberCard.module.scss
@@ -51,3 +51,16 @@
         width: 25%;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .container {
+        width: 100%;
+
+        .content {
+            .description {
+                width: 60%;
+                margin: 0px auto;
+            }
+        }
+    }
+}
