--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -88,3 +88,11 @@
         }
     }
 }
+
+@media screen and (max-width: 768px) {
+    .container {
+        .content {
+            width: 100%;
+        }
+    }
+}
