--- a/src/components/navigation/navbar/navbar.module.scss
+++ b/src/components/navigation/navbar/navbar.module.scss
@@ -4,11 +4,9 @@
     justify-content: space-between;
     padding: 20px 0px;
     width: 1200px;
-    // width: 100%;
     margin: 0px auto;
     height: var(--navigationBarHight);
     z-index: 10;
-
     background-color: transparent;
     // position: fixed;
     transition: transform 0.4s ease-in-out, background-color 0.4s ease-in-out;
@@ -35,6 +33,14 @@
     position: relative;
     justify-content: center;
     z-index: -1;
+
+    img {
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: max-content;
+        width: 100%;
+    }
 }
 
 .overlayColor {
@@ -45,73 +51,61 @@
     z-index: -10;
 }
 
-.topPageVectors img {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: max-content;
-    width: 100%;
-}
-
-.logoDiv {
-    width: 40vh;
-}
-
 .logoLink {
     display: flex;
     align-items: center;
     gap: 20px;
     text-decoration: none;
-}
 
-.logoLink h1 {
-    color: var(--text-dark);
+    h1 {
+        color: var(--text-dark);
+    }
 }
 
 .links {
     display: flex;
     gap: 10px;
-    /* margin-right: 5vh; */
-}
 
-.links a {
-    text-decoration: none;
-    color: var(--text-dark);
-    font-size: 18px;
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: all 0.25s;
-}
+    a {
+        text-decoration: none;
+        color: var(--text-dark);
+        font-size: 18px;
+        padding: 5px 10px;
+        border-radius: 5px;
+        transition: all 0.25s;
 
-.links a:hover {
-    background: #2c599d;
-    color: var(--text-light);
+        &:hover {
+            background: #2c599d;
+            color: var(--text-light);
+        }
+    }
 }
 
 .bigButtons {
     margin-left: auto;
     display: flex;
     gap: 10px;
-}
 
-.bigButtons button {
-    padding: 15px;
-    border-radius: 10px;
-    cursor: pointer;
-    border: none;
-    font-size: 15px;
-}
+    button {
+        padding: 15px;
+        border-radius: 10px;
+        cursor: pointer;
+        border: none;
+        font-size: 15px;
 
-.bigButtons button:last-child {
-    background: #4945ff;
-    color: var(--text-light);
+        &:last-child {
+            background: #4945ff;
+            color: var(--text-light);
+        }
+    }
 }
 
 .burgerMenu {
     display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
+    font-size: 24px;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
 }
 
 @media screen and (max-width: 1280px) {
@@ -131,18 +125,15 @@
 }
 
 @media screen and (max-width: 768px) {
-    .logoLink {
-        display: none;
-    }
+    .container {
+        padding: 20px 40px;
 
-    .burgerMenu {
-        display: block;
-        cursor: pointer;
-        transform: scale(1.5);
-        margin: 33px;
-    }
+        .burgerMenu {
+            display: block;
+        }
 
-    .links {
-        display: none;
+        .links {
+            display: none;
+        }
     }
 }
