--- a/src/components/navigation/navbar/navbar.module.scss
+++ b/src/components/navigation/navbar/navbar.module.scss
@@ -127,6 +127,7 @@
 @media screen and (max-width: 768px) {
     .container {
         padding: 20px 40px;
+        width: 100%;
 
         .burgerMenu {
             display: block;
