--- a/src/components/contact/Contact.module.scss
+++ b/src/components/contact/Contact.module.scss
@@ -94,6 +94,7 @@
 
 @media screen and (max-width: 768px) {
     .container {
+        width: 640px;
         &-imgDev {
             display:none;
         }
