--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -35,7 +35,7 @@
 
                 .colBoxContent {
                     padding: 10px 0px;
-                    display:flex;
+                    display: flex;
                     align-items: center;
 
                     .icon {
@@ -66,7 +66,7 @@
             border-top: 1px solid #ffffff20;
 
             p {
-                font-size: 14px; 
+                font-size: 14px;
                 color: var(--text-light);
             }
         }
@@ -93,6 +93,21 @@
     .container {
         .content {
             width: 100%;
+
+            .topContent {
+                flex-direction: column;
+                gap: 30px;
+                padding-left: 50px;
+
+                .logoColBox {
+                    display: none;
+                }
+            }
+
+            .bottomContent {
+                justify-content: flex-start;
+                padding: 20px 50px;
+            }
         }
     }
 }
