--- a/src/components/showcasing/MainSection.module.scss
+++ b/src/components/showcasing/MainSection.module.scss
@@ -92,7 +92,7 @@
 
 @media screen and (max-width: 768px) {
     .container {
-        // width: 100%;
+        width: 100%;
         .content {
             height: 300px;
 
