--- a/src/components/contact/Contact.module.scss
+++ b/src/components/contact/Contact.module.scss
@@ -94,7 +94,7 @@
 
 @media screen and (max-width: 768px) {
     .container {
-        width: 640px;
+        width: 100%;
         &-imgDev {
             display:none;
         }
