--- a/src/components/cards/TeamMemberCard.module.scss
+++ b/src/components/cards/TeamMemberCard.module.scss
@@ -64,3 +64,13 @@
         }
     }
 }
+
+@media screen and  (max-width: 430px) {
+    .container {
+        .content {
+            .description {
+                width: 100%;
+            }
+        }
+    }
+}
