--- a/src/components/cards/InfoCard.module.scss
+++ b/src/components/cards/InfoCard.module.scss
@@ -63,6 +63,10 @@
 
 @media screen and (max-width: 1024px) {
     .container {
-        width: 100%;
+        // width: 100%;
+        width: 45%;
     }
+}
+
+@media screen and (max-width: 768px) {
 }
