--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -116,7 +116,7 @@
         width: 768px;
         display: flex;
         justify-content: center;
-        flex-direction: column;
+        /* flex-direction: column; */
         flex-wrap: wrap;
         gap: 30px;
     }
