Update header responsiveness (Phone)

--- a/src/components/navigation/sidebar/Sidebar.scss
+++ b/src/components/navigation/sidebar/Sidebar.scss
@@ -22,7 +22,11 @@
         color: var(--text-dark);
         display: flex;
         align-items: center;
-        gap: 10px;
+        // gap: 10px;
+        
+        img{
+          transform: scale(0.7); 
+        }
     }
   }
 
