--- a/src/components/navigation/navbar/navbar.module.scss
+++ b/src/components/navigation/navbar/navbar.module.scss
@@ -151,3 +151,15 @@
         }
     }
 }
+@media screen and (max-width: 768px) {
+    .container{
+
+        .logoLink{
+            gap: 0;
+
+            img{
+                transform: scale(0.7); 
+            }
+        }
+    }
+}
