--- a/src/components/showcasing/MainSection.module.scss
+++ b/src/components/showcasing/MainSection.module.scss
@@ -108,6 +108,7 @@
 
                 h1 {
                     text-align: center;
+                    font-size: 30px;
                 }
             }
         }
