--- a/src/components/navigation/sidebar/Sidebar.scss
+++ b/src/components/navigation/sidebar/Sidebar.scss
@@ -56,6 +56,7 @@
     font-size: 1.5rem;
     cursor: pointer;
     color: #6c757d;
+    display:flex;
     transition: color 0.2s ease;
 
     &:hover {
