--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -91,6 +91,7 @@
 
 @media screen and (max-width: 768px) {
     .container {
+        margin-top: 40px;
         .content {
             width: 100%;
 
