--- a/src/app/blog/BlogFeed.scss
+++ b/src/app/blog/BlogFeed.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 1200px;
+    min-height: calc(100vh - var(--navigationBarHight));
     margin-left: auto;
     margin-right: auto;
     margin-top: calc(#{var(--navigationBarHight)} + 5vh);
