--- a/src/app/blog/BlogFeed.scss
+++ b/src/app/blog/BlogFeed.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1200px;
+    width: 80%;
     min-height: calc(100vh - var(--navigationBarHight));
     margin-left: auto;
     margin-right: auto;
