--- a/src/components/whatapp/whatsAppIcon.module.scss
+++ b/src/components/whatapp/whatsAppIcon.module.scss
@@ -1,7 +1,7 @@
 .container{
-    position: fixed;
-    bottom: 5vh;
-    right: 5vh;
+    position: absolute;
+    top: 5vh;
+    right: 6vh;
     scale: 3;
     z-index: 10;
     transition: all 0.4s ease-in-out;
