--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -132,6 +132,10 @@
         width: 768px;
         gap: 70px;
     }
+
+    .title .headers {
+        font-size: 28px;
+    }
 }
 
 @media screen and (max-width: 842px) {
@@ -144,7 +148,7 @@
     .teamContainer {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 30px;
+        gap: 0px;
         width: 640px;
     }
 
@@ -159,7 +163,7 @@
 
 @media screen and (max-width: 650px) {
     .teamContainer {
-        grid-template-columns: 1fr;
-        width: 70%;
+        /* grid-template-columns: 1fr; */
+        width: 100%;
     }
 }
