--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,7 @@
   --btn-orange: #f98125;
   --logoAbundantColor: red;
   --navigationBarHight: 10vh;
+  --bodyBackground: #f6f4f7;
 }
 
 * {
@@ -23,7 +24,7 @@
 }
 
 body {
-  background: #fff;
+  background: var(--bodyBackground);
 }
 
 
