--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
   --text-dark: #11224d;
   --text-gray: #797979;
   /* --main-color: #0089ff; */
-  --main-color: #5b83c3;
+  --main-color: #79abfe;
   --btn-blue-1: #2c599d;
   --btn-orange: #f98125;
   --logoAbundantColor: red;
