--- a/src/components/clients/clients.module.scss
+++ b/src/components/clients/clients.module.scss
@@ -7,7 +7,7 @@
 }
 
 .content {
-    // max-width: 100%;
+    max-width: 100%;
     margin: 0 auto;
     text-align: center;
 }
@@ -66,6 +66,12 @@
         background-color: var(--btn-orange);
     }
 }
+@media (max-width: 1024px) {
+    .container{
+        width: 800px;
+    }
+}
+
 
 @media (max-width: 768px) {
     .container {
