--- a/src/components/CoreFeatures/CoreFeatures.module.scss
+++ b/src/components/CoreFeatures/CoreFeatures.module.scss
@@ -35,6 +35,11 @@
       font-size: 0.9rem;
     }
   }
+
+  @media (max-width: 1024px) {
+    width: 900px;
+  }
+
   @media (max-width: 768px) {
     width: 600px;
   }
