--- a/src/components/customerReviews/customerReviews.module.scss
+++ b/src/components/customerReviews/customerReviews.module.scss
@@ -25,27 +25,33 @@
     background-color: var(text-light);
     color: var(--text-dark);
     border-radius: 8px;
-    padding: 1.5rem;
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     position: relative;
 }
-.textContainer{
-    padding: 1.5rem;
-    background: darkseagreen;
-    padding-top: 50px;
-    height: 200px;
-    margin-top: 45px;
-    border-radius: 50% 50% 2px 2px;
-}
 
 .imageWrapper {
-    width: 80px;
+    width: 100%;
     height: 80px;
-    border-radius: 50%;
     overflow: hidden;
-    margin: 0 auto 1rem;
-    transform: translate(100%, 0);
+    position: absolute;
+    
+    img{
+        width: 80px;
+        height: inherit;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+}
+
+.textContainer{
+    padding: 1rem;
+    background: var(--main-color);
+    padding-top: 50px;
+    height: 200px;
+    margin: 1.5rem;
+    margin-top: 35px;
+    border-radius: 50% 50% 2px 2px;
 }
 
 .avatar {
