--- a/src/components/testimonial/Testimonial.module.scss
+++ b/src/components/testimonial/Testimonial.module.scss
@@ -58,8 +58,8 @@
             padding: 2rem;
             margin-bottom: 1rem;
             flex: 1;
-            min-width: 350px;
-            max-width: 350px;
+            min-width: 320px;
+            max-width: 320px;
         
             .reviewText{
                 .leftQuoteDiv{
@@ -126,14 +126,20 @@
         }
     }
 
-    @media (max-width: 1024px) {
-        width: 800px;
-    }
     
-    @media (max-width: 768px) {
-        width: 600px;
+    @media screen and (max-width: 1280px) {
+        width: 986px;
     }
-    
+
+    @media screen and (max-width: 1024px) {
+        width: 768px;
+    }
+
+
+    @media screen and (max-width: 768px) {
+        width: 90%;
+    }
+  
     @media (max-width: 480px) {
         width: 400px;
     }
