link headers with config

--- a/src/components/about/about.module.scss
+++ b/src/components/about/about.module.scss
@@ -12,8 +12,12 @@
         
         .title {
             font-size: 2.5rem;
-            color: var(--btn-orange);
+            color: var(--text-dark);
             margin-bottom: 1rem;
+
+            span {
+                color: var(--btn-orange);
+            }
         }
         
         .description {
