--- a/src/components/CoreFeatures/CoreFeatures.module.scss
+++ b/src/components/CoreFeatures/CoreFeatures.module.scss
@@ -1,40 +1,59 @@
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: center;
-  gap: 3rem;
-  padding: 3rem 1rem;
-  color: var(--text-dark);
+.container{
   width: 1200px;
 
-  .featureItem {
+  .headers{
+    font-size: 50px;
+    margin: 40px 0px;
+    color: var(--text-dark);
     text-align: center;
-    padding: 1.5rem;
-    background-color: var(--text-light);
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-    min-width: 200px;
-    max-width: 200px;
 
-    &:hover {
-      transform: translateY(-5px);
-    }
-
-    .feature-icon {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-
-    h3 {
-      margin-bottom: 0.5rem;
-    }
-
-    p {
-      font-size: 0.9rem;
+    span{
+      color: var(--btn-orange);
     }
   }
+
+  .features {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    gap: 3rem;
+    padding: 3rem 1rem;
+    color: var(--text-dark);
+
+    .featureItem {
+      text-align: center;
+      padding: 1.5rem;
+      background-color: var(--text-light);
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+      min-width: 200px;
+      max-width: 200px;
+
+      &:hover {
+        transform: translateY(-5px);
+      }
+
+      .feature-icon {
+        font-size: 2.5rem;
+        margin-bottom: 1rem;
+      }
+
+      h3 {
+        margin-bottom: 0.5rem;
+      }
+
+      p {
+        font-size: 0.9rem;
+      }
+    }
+  }
+
+  @media (max-width: 1024px) {
+    width: 900px;
+  }
+
   @media (max-width: 768px) {
     width: 600px;
   }
