added series support

--- a/src/components/blog/ArticleCard.scss
+++ b/src/components/blog/ArticleCard.scss
@@ -9,7 +9,9 @@
     padding: 40px;
     transition: box-shadow 0.3s ease;
     min-width: 320px;
-    width: 90%;
+    width: 55%;
+    max-width: 80%;
+    position: relative;
 
     &:hover {
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
@@ -69,10 +71,17 @@
         }
     }
 
+    @media screen and (max-width: 1024px) {
+        width: 70%;
+        gap: 10px;
+        
+    }
+
     @media screen and (max-width: 768px) {
         align-items: center;
         gap: 5px;
         // justify-content: center;
+        max-width: 90%;
         
         &-thumbnail {
             margin:auto;
