--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -42,19 +42,19 @@
     gap: 30px;
 } */
 
-.responsiveContainer {
+/* .responsiveContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 40px;
     width: 1200px;
-    /* width: 100%; */
+    /* width: 100%; /
     margin: 20px auto;
     overflow: hidden;
     transition: max-height 1s ease;
-}
+} */
 
-.showMoreContainer button {
+/* .showMoreContainer button {
     display: flex;
     align-items: center;
     padding: 15px 35px;
@@ -75,18 +75,18 @@
     font-size: 18px;
     position: absolute;
     right: 10px;
-}
-
+} */
+/* 
 .showMoreContainer button:hover {
     background: transparent;
     color: var(--btn-orange);
     border: 1px solid var(--btn-orange);
-}
+} */
 
 @media screen and (max-width: 1280px) {
-    .responsiveContainer {
+    /* .responsiveContainer {
         width: 986px;
-    }
+    } */
 
     /* .cardContainer {
         width: 986px;
@@ -106,16 +106,16 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .responsiveContainer {
+    /* .responsiveContainer {
         display: flex;
-        /* flex-wrap: wrap; */
+        /* flex-wrap: wrap; /
         justify-content: center;
         width: 768px;
         gap: 40px;
         margin: 20px auto;
         overflow: hidden;
         transition: max-height 1s ease;
-    }
+    } */
 /* 
     .cardContainer {
         width: 768px;
@@ -153,9 +153,9 @@
         width: 640px;
     } */
 
-    .responsiveContainer {
+    /* .responsiveContainer {
         width: 100%;
-    }
+    } */
 
     /* .cardContainer {
         width: 100%;
