--- a/src/components/navigation/navbar/navbar.module.scss
+++ b/src/components/navigation/navbar/navbar.module.scss
@@ -67,6 +67,8 @@
         left: 0;
         transform: translate(150%, 130%);
         color: var(--btn-orange);
+        font-size: 20px;
+        font-weight: 500;
     }
 }
 
