commin soon update (not done)

--- a/src/components/cards/InfoCard.module.scss
+++ b/src/components/cards/InfoCard.module.scss
@@ -57,6 +57,13 @@
                 background: var(--main-color);
                 color: var(--text-light);
             }
+
+        }
+        .comingSoon{
+            position: absolute;
+            right: 15px;
+            top: 15px;
+            transform: rotate(45deg);
         }
     }
 }
