--- a/src/components/cards/InfoCard.module.scss
+++ b/src/components/cards/InfoCard.module.scss
@@ -9,6 +9,7 @@
     transition: 0.6s;
     width: 31%;
     height: 550px;
+    overflow: hidden;
 
     &:hover {
         box-shadow: 0px 0px 8px #00000030;
@@ -57,14 +58,22 @@
                 background: var(--main-color);
                 color: var(--text-light);
             }
-
         }
-        .comingSoon{
+
+        .comingSoon {
+            color: var(--text-dark);
+            font-weight: bold;
+            margin-top: 10px;
+            background: gold;
+            text-align: center;
             position: absolute;
-            right: 15px;
-            top: 15px;
+            right: -40px;
+            top: 25px;
+            width: 170px;
             transform: rotate(45deg);
         }
+
+
     }
 }
 
