--- a/src/components/navigation/navbar/navbar.module.scss
+++ b/src/components/navigation/navbar/navbar.module.scss
@@ -61,18 +61,22 @@
 
     h1 {
         color: var(--text-dark);
+        position: relative;
     }
     .slogan{
         position: absolute;
-        top: 0;
-        left: 0;
-        transform: translate(150%, 130%);
+        top: 35px;
+        left: 50%;
+        // transform: translate(150%, 130%);
         color: var(--btn-orange);
         font-size: 20px;
         font-weight: 500;
         background: transparent;
         border: none;
         cursor: help;
+        text-align: left;
+        font-size: 20px;
+        width: max-content;
     }
 }
 
