--- a/src/components/showcasing/MainSection.module.scss
+++ b/src/components/showcasing/MainSection.module.scss
@@ -49,6 +49,11 @@
                     color: var(--btn-orange);
                 }
             }
+            .heroSubHeadLine {
+                font-size: 15px;
+                color: var(--text-gray);
+                width: 90%;
+            }
         }
 
         .imgContainer {
