--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,9 +7,9 @@
   --text-dark: #11224d;
   --text-gray: #797979;
   /* --main-color: #0089ff; */
-  --main-color: #08baf8;
+  --main-color: #79abfe;
   --btn-blue-1: #2c599d;
-  --btn-orange: #08baf8;
+  --btn-orange: #f98125;
   --logoAbundantColor: red;
   --navigationBarHight: 10vh;
   --bodyBackground: #f6f4f7;
