--- a/src/app/blog/BlogFeed.scss
+++ b/src/app/blog/BlogFeed.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 40px;
     width: 80%;
     min-height: calc(100vh - var(--navigationBarHight));
     margin-left: auto;
