--- a/src/components/blog/ArticleCard.scss
+++ b/src/components/blog/ArticleCard.scss
@@ -5,13 +5,14 @@
     border: 1px solid #ddd;
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 20px 0;
     padding: 40px;
     transition: box-shadow 0.3s ease;
     min-width: 320px;
     width: 55%;
     max-width: 80%;
     position: relative;
+
+
 
     &:hover {
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
@@ -88,5 +89,75 @@
             margin-bottom: 20px;
         }
         
+    }
+}
+.articleContainer{
+    position: relative;
+    min-width: 320px;
+    max-width: 80%;
+    width: 55%;
+    border-radius: 4px;
+
+    .seriesBackground1{
+        position: absolute;
+        transition: all 0.5s;
+        top: -5px;
+        left: 0px;
+        background: #fff;
+        width: 100%;
+        height: 30px;
+        z-index: -1;
+        scale: 0.99;
+        border-radius: inherit;
+        transition: transform 0.25s;
+        border: solid 1px #ddd;
+    }
+    .seriesBackground2{
+        position: absolute;
+        transition: all 0.5s;
+        top: -8px;
+        left: 0px;
+        background: #fff;
+        width: 100%;
+        height: 30px;
+        z-index: -2;
+        scale: 0.98;
+        border-radius: inherit;
+        transition: transform 0.25s;
+        border: solid 1px #ddd;
+    }
+
+    .article-card-series{
+        width: 100%;
+        min-width: none;
+        max-width: none;
+        // overflow: hidden;
+    }
+    .cardStyle{
+        position: absolute;
+        top: 10px;
+        right: 30px;
+        color: var(--text-dark);
+        width: 120px;
+        text-align: center;
+        border: 1px solid var(--text-gray);
+        border-radius: 4px 20px;
+        padding: 3px 0;
+        
+        @media screen and (max-width: 768px) {
+            right: 10px;
+        }
+    }
+
+    &:hover {
+        .seriesBackground1{
+            transform: translate(0px, -5px);
+        }
+        .seriesBackground2{
+            transform: translate(0px, -10px);
+        }
+    }
+    @media screen and (max-width: 1024px) {
+        width: 70%;
     }
 }
