--- a/src/components/blog/ArticleCard.scss
+++ b/src/components/blog/ArticleCard.scss
@@ -98,33 +98,27 @@
     width: 55%;
     border-radius: 4px;
 
-    .seriesBackground1{
+    .seriesBackground{
         position: absolute;
         transition: all 0.5s;
-        top: -5px;
-        left: 0px;
         background: #fff;
         width: 100%;
         height: 30px;
-        z-index: -1;
-        scale: 0.99;
         border-radius: inherit;
         transition: transform 0.25s;
         border: solid 1px #ddd;
     }
+    .seriesBackground1{
+        top: -5px;
+        left: 0px;
+        z-index: -1;
+        scale: 0.99;
+    }
     .seriesBackground2{
-        position: absolute;
-        transition: all 0.5s;
         top: -8px;
         left: 0px;
-        background: #fff;
-        width: 100%;
-        height: 30px;
         z-index: -2;
         scale: 0.98;
-        border-radius: inherit;
-        transition: transform 0.25s;
-        border: solid 1px #ddd;
     }
 
     .article-card-series{
@@ -143,7 +137,7 @@
         border: 1px solid var(--text-gray);
         border-radius: 4px 20px;
         padding: 3px 0;
-        
+
         @media screen and (max-width: 768px) {
             right: 10px;
         }
