blog related, backend (not completed)

--- a/src/components/blog/MarkdownView.scss
+++ b/src/components/blog/MarkdownView.scss
@@ -203,6 +203,11 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+
+        &-title{
+            text-align: center;
+            color: var(--text-dark);
+        }
     }
 
     //mobilw view
