--- a/src/components/cards/relatedCard.module.scss
+++ b/src/components/cards/relatedCard.module.scss
@@ -2,14 +2,16 @@
     display: flex;
     flex-direction: column;
     gap: 0px;
-    background: #f6f4f7;
-    // padding: 20px 0px;
+    background: var(--bodyBackground);
     border-radius: 15px;
-    transition: 0.6s;
     max-height: 300px;
     text-decoration: none;
     color: var(--text-dark);
+    transition: transform 0.5s;
     
+    &:hover {
+        transform: translateY(-5px);
+    }
 
     &:first-child {
         margin-top: 0px;
@@ -24,14 +26,12 @@
     }
 
     .content{
-        
         display: flex;
         flex-direction: row;
         align-items: center;
         gap: 10px;
         padding: 10px;
         border-radius: 15px;
-        transition: 0.6s;
         border-bottom: 1px solid var(--text-gray);
 
         .media {
