--- a/src/app/blog/BlogFeed.scss
+++ b/src/app/blog/BlogFeed.scss
@@ -8,4 +8,39 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: calc(#{var(--navigationBarHight)} + 5vh);
+
+    &-filter{
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 50px;
+        height: 5vh;
+        border-bottom: 1px solid var(--text-gray);
+
+        &-search{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            background-color: var(--text-light);
+            padding: 10px;
+            margin-bottom: 20px;
+            border-radius: 50px;
+
+            &-icon{
+                color: var(--btn-orange);
+            }
+            &-input{
+                width: 165px;
+                border: none;
+                background-color: transparent;
+                
+                &:focus {
+                    border: none; 
+                    outline: none;
+                }
+            }
+        }
+    }
 }
