--- a/src/components/blog/MarkdownView.scss
+++ b/src/components/blog/MarkdownView.scss
@@ -1,3 +1,39 @@
+.markdown-view-container{
+    display: flex;
+    width: 1200px;
+    margin: auto;
+    background: gray;
+    gap: 20px; 
+    
+    @media screen and (max-width: 1280px) {
+        width: 986px;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    
+    @media screen and (max-width: 1024px) {
+        width: 768px;
+
+        .markdown-view-navigation{
+            width: 150px;
+        }
+        .markdown-view-content{
+            max-width: 590px;            
+        }
+
+    }
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        width: 80%;
+    }
+    // @media screen and (max-width: 768px) {
+    //     width: 100%;
+    // }
+    
+}
+
 .markdown-view {
     display: flex;
     flex-direction: row;
@@ -177,7 +213,6 @@
         width: 200px;
         padding: 1.25rem;
         overflow-y: auto;
-        height: 100vh;
         transition: left 0.3s;
         z-index: 10;
         position: sticky;
@@ -195,7 +230,6 @@
         width: 270px;
         padding: 2px;
         overflow-y: auto;
-        height: 100vh;
         transition: left 0.3s;
         z-index: 10;
         position: sticky;
