--- a/src/components/cards/CourseCard.module.scss
+++ b/src/components/cards/CourseCard.module.scss
@@ -2,8 +2,6 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    // background: #f6faff;
-    // padding: 20px 0px;
     border-radius: 15px;
     box-shadow: 1px 1px 10px #00000030;
     transition: 0.6s;
@@ -39,7 +37,7 @@
     }
     .link{
         text-decoration: none;
-        color: var(--text-dark);
+        color: var(--btn-orange);
         font-size: 17px;
         margin: 20px auto;
         width: fit-content;
@@ -48,19 +46,6 @@
         border: 1px solid var(--btn-orange);
         padding: 7px;
         border-radius: 20px;
-        position: relative;
-        overflow: hidden;
-
-        span{
-            width: 0;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 50%;
-            background-color: var(--main-color);
-            transition: all 0.5s ease-in-out;
-            z-index: -1;
-        }
 
         &:hover span{
             width: 100%;
