--- a/src/components/cards/CourseCard.module.scss
+++ b/src/components/cards/CourseCard.module.scss
@@ -32,16 +32,17 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            gap: 15px;
 
             h2{
-                font-size: 18px;
+                font-size: 19px;
             }
             
             span {
                 font-weight: 500;
                 font-size: 18px;
                 height: fit-content;
-                background-color: gold;
+                background-color: var(--btn-orange);
                 padding: 5px 15px;
                 border-radius: 5px;
                 transition: padding 0.3s ease-in-out;
@@ -62,6 +63,9 @@
             span{
                 font-weight: 500;
                 color: var(--text-gray);
+            }
+            p{
+                margin-bottom: 5px;
             }
         }
 
